* add bottom margin to fix vertical alignment of caret icon.

--- a/src/less/basic/mixins.less
+++ b/src/less/basic/mixins.less
@@ -708,6 +708,7 @@
   width: 0;
   height: 0;
   margin-left: 2px;
+  margin-bottom: 2px; // Fix vertical aligment
   vertical-align: middle;
   border-top:   @caret-width-base dashed;
   border-top:   @caret-width-base solid ~"\9"; // IE8
